cmake_minimum_required(VERSION 3.20)
project(ft_containers)

set(CMAKE_CXX_STANDARD 98)

add_executable(ft_containers
        main.cpp
        iterator2/Dist_type.hpp
        iterator2/iter_advance.hpp
        iterator2/iter_cat.hpp
        iterator2/iter_distance.hpp
        iterator2/iter_swap.hpp
        iterator2/iterator.hpp
        iterator2/iterator_category.hpp
        iterator2/iterator_tag.hpp
        iterator2/iterator_traits.hpp
        iterator2/random_access_iterator.hpp
        iterator2/reverse_iterator.hpp
        iterator2/Val_type.hpp
        vector/vector.hpp
        vector/vector_base.hpp
        vector/vector_elements_access.hpp
        vector/vector_member_functions.hpp
        vector/vector_oerator_overloads.hpp
        vector/vector_iterators.hpp
        vector/vector_capacity.hpp
        vector/vector_modifiers.hpp
        vector/vector_protected.hpp
        iterator/iterator.hpp
        iterator/iterator_traits.hpp
        iterator/iterator_tags.hpp
        iterator/reverse_iterator.hpp
        iterator/random_access_iterator.hpp
        iterator/iterator_category.hpp
        iterator/iterator_base.hpp
        iterator/iterator_value_type.hpp
        iterator/iterator_distance_type.hpp
        iterator/iterator_swap.hpp
        iterator/iterator_advance.hpp
        iterator/iterator_distance.hpp
        algorithm/algorithm.hpp
        algorithm/lexicographical_compare.hpp
        algorithm/copy.hpp
        algorithm/equal.hpp
        algorithm/fill.hpp
        stack/stack.hpp
        stack/stack_capacity.hpp
        stack/stack_element_access.hpp
        stack/stack_member_functions.hpp
        stack/stack_modifiers.hpp
        stack/stack_non_member_functions.hpp
        set/set.hpp
        set/set_traits.hpp
        set/set_constructors.hpp
        map/map_base.hpp
        tree/tree.hpp
        tree/tree_lookup.hpp
        tree/tree_base.hpp
        tree/tree_nod.hpp
        tree/tree_ptr.hpp
        tree/tree_traits.hpp
        tree/tree_value.hpp
        tree/tree_constructors.hpp
        tree/tree_iterator.hpp
        tree/const_tree_iterator.hpp
        tree/tree_protected.hpp
        tree/tree_iterators.hpp
        tree/tree_modifiers.hpp
        tree/tree_capacity.hpp
        tree/tree_observers.hpp
        utility/enable_if.hpp
        utility/pair.hpp
        utility/is_integral.hpp
        utility/utility.hpp
        utility/make_pair.hpp algorithm/mismatch.hpp)
